--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" tipe="text/css" href="style/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
 
     <title>Proyectual Digi I</title>
@@ -19,16 +21,21 @@
   <body>
     <main>
 
-      <div id="reader-container">
-        <div id="reader"></div>
+      <div class="pantallaNegra" id="pantallaNegra">
+        <div class="michi" style="
+        z-index: 16;
+        top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+        background-image: url('/assets/cartas/locketanimacion.webp'); 
+        animation: animacion 0.25s steps(4) forwards infinite;
+        background-size: 1368px 500px;
+    "></div>
       </div>
-<!-- Botón para activar el escáner -->
-<button class="btn-qr" onclick="iniciarScanner()">📷 Escanear QR</button>
-
 
 
       <div class="banner">
-        <div class="bannerlogo"></div>
+        <div class="bannerlogo" ></div>
       </div>
 
       <div class="carousel-container">
@@ -36,23 +43,23 @@
 <div  class="cartasgaleriacontainer" id="galeriacartas">
   <div class="carta-wrapper" data-pass="001">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/001/001.webp);" data-target="carousel-item-1"></button>
-    <div class="overlay-bloqueo">🔒</div>
+    <div class="overlay-bloqueo">001</div>
   </div>
   <div class="carta-wrapper" data-pass="002">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/002/002.webp);" data-target="carousel-item-2"></button>
-    <div class="overlay-bloqueo">🔒</div>
+    <div class="overlay-bloqueo">002</div>
   </div>
   <div class="carta-wrapper" data-pass="003">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/003/003.webp);" data-target="carousel-item-3"></button>
-    <div class="overlay-bloqueo">🔒</div>
+    <div class="overlay-bloqueo">003</div>
   </div>
   <div class="carta-wrapper" data-pass="004">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/004/004.webp);" data-target="carousel-item-4"></button>
-    <div class="overlay-bloqueo">🔒</div>
+    <div class="overlay-bloqueo">004</div>
   </div>
   <div class="carta-wrapper" data-pass="005">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/005/005.webp);" data-target="carousel-item-5"></button>
-    <div class="overlay-bloqueo">🔒</div>
+    <div class="overlay-bloqueo">005</div>
   </div>
   
 
