--- a/index.html
+++ b/index.html
@@ -15,53 +15,223 @@
     <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
 
-    <title>Proyectual Digi I</title>
+    <title>Proyectual I</title>
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
   </head>
   <body>
     <main>
 
+<!----------------------------ALERTA--------------------------------->
+
+      <div id="alertaModal" class="modal-alerta oculto">
+        <div class="contenido-alerta">
+<DIV class="michiconfundido"></DIV>
+          <p id="textoAlerta" ></p>
+          <button onclick="cerrarAlerta()">OK</button>
+        </div>
+      </div>
+<!------------------------PANTALLA NEGRA CARGANDO------------------------------------->
+
+
       <div class="pantallaNegra" id="pantallaNegra">
         <div class="michi" style="
-        z-index: 16;
+          background-image: url(./assets/cartas/logo.webp);
+           background-size: cover;
+           top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);"></div>
+        <div class="michi" style="
+        z-index: 999999;
         top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
         background-image: url('/assets/cartas/locketanimacion.webp'); 
-        animation: animacion 0.25s steps(4) forwards infinite;
+        animation: animacion 0.2s steps(4) forwards infinite;
         background-size: 1368px 500px;
     "></div>
       </div>
+<!------------------------BANNER PRESENTACION------------------------------------->
 
 
       <div class="banner">
+        <div data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="1000" class="bannermichis"></div>
+        <div data-aos="fade-left" data-aos-duration="1500"  data-aos-delay="700" class="bannermichis"></div>
         <div class="bannerlogo" ></div>
       </div>
+
+<!----------------------boton de codigo--------------------------------------->
+
+  <div class="BOTONDESBLOQUEAR" id="inputCodigoContainer">
+    <input type="text" id="codigoGlobal" placeholder="INGRESAR CÓDIGO" autocomplete="off" />
+    <button id="botonVerificarCodigo">🔓</button>
+  </div>
+
+<!------------------------------------------------------------->
+
 
       <div class="carousel-container">
 
 <div  class="cartasgaleriacontainer" id="galeriacartas">
   <div class="carta-wrapper" data-pass="001">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/001/001.webp);" data-target="carousel-item-1"></button>
-    <div class="overlay-bloqueo">001</div>
+    <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="002">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/002/002.webp);" data-target="carousel-item-2"></button>
-    <div class="overlay-bloqueo">002</div>
+    <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="003">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/003/003.webp);" data-target="carousel-item-3"></button>
-    <div class="overlay-bloqueo">003</div>
+    <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="004">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/004/004.webp);" data-target="carousel-item-4"></button>
-    <div class="overlay-bloqueo">004</div>
+    <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="005">
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/005/005.webp);" data-target="carousel-item-5"></button>
-    <div class="overlay-bloqueo">005</div>
+    <div class="overlay-bloqueo"></div>
   </div>
-  
+  <div class="carta-wrapper" data-pass="006">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/006/006.webp);" data-target="carousel-item-6"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-8"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-9"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-10"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-8"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-9"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-10"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-8"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-9"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-10"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-8"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-9"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-10"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
+  <div class="carta-wrapper" data-pass="">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+    <div class="overlay-bloqueo"></div>
+  </div>
 
 </div>
 
@@ -257,27 +427,33 @@
 <!--------------------------------------006---------------------------------------> 
 
 
-        <div class="carousel-item" id="carousel-item-6" data-bg-base="logoprograma13">
+        <div class="carousel-item" id="carousel-item-6">
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle2 circle4">
+            <div class="carta frente" data-circle="circle4">
               <div class="fondo-rainbow"></div> 
-              <img class="medio" src="assets/cartas/san1.webp" />
-              <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(90deg) translateX(-30px);">
-                <div class="line-container" style="justify-content: first baseline;">
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
+              <img class="medio" src="assets/cartas/006/006fondo.webp" />
+              <div class="efectoholograficolineas" style="z-index: 6; transform: rotate(45deg) scale(2);">
+                <div class="line-container" style="justify-content: first baseline;" >
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(253, 237, 9);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(0, 240, 192);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(255, 213, 3);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(255, 96, 213);"></div>
                 </div>
                 <div class="line-container" style="justify-content: end;">
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(140, 144, 255);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(255, 70, 70);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(14, 255, 34);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 8px rgb(255, 0, 195);"></div>
                 </div>
-              </div>
-              <img class="arriba" src="assets/cartas/san2.webp" />
-              <img class="sombra" id="eng" src="assets/cartas/san3.webp" />
+                </div>
+              <div class="michi" style="
+              filter: opacity(80%);
+              z-index: 7;
+              background-image: url('/assets/cartas/006/006fondo_animacion.webp'); 
+              animation: animacion 0.3s steps(4) forwards infinite;
+              background-size: 1368px 500px;
+          "></div>
+              <img class="sombra" id="eng" src="assets/cartas/006/006papelarriba.webp" />
               
             </div>
             <div class="carta trasera"> </div>
