--- a/index.html
+++ b/index.html
@@ -73,27 +73,27 @@
 
 <div  class="cartasgaleriacontainer" id="galeriacartas">
   <div class="carta-wrapper" data-pass="001">
-    <button class="cartaejemplo" style="background-image: url(./assets/cartas/001/001.webp);" data-target="carousel-item-1"></button>
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
     <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="002">
-    <button class="cartaejemplo" style="background-image: url(./assets/cartas/002/002.webp);" data-target="carousel-item-2"></button>
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-2"></button>
     <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="003">
-    <button class="cartaejemplo" style="background-image: url(./assets/cartas/003/003.webp);" data-target="carousel-item-3"></button>
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-3"></button>
     <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="004">
-    <button class="cartaejemplo" style="background-image: url(./assets/cartas/004/004.webp);" data-target="carousel-item-4"></button>
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/004.webp);" data-target="carousel-item-4"></button>
     <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="005">
-    <button class="cartaejemplo" style="background-image: url(./assets/cartas/005/005.webp);" data-target="carousel-item-5"></button>
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/005.webp);" data-target="carousel-item-5"></button>
     <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="006">
-    <button class="cartaejemplo" style="background-image: url(./assets/cartas/006/006.webp);" data-target="carousel-item-6"></button>
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/006.webp);" data-target="carousel-item-6"></button>
     <div class="overlay-bloqueo"></div>
   </div>
   <div class="carta-wrapper" data-pass="">
@@ -241,7 +241,7 @@
          <div class="carousel-item" id="carousel-item-1" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
-              <img class="medio" src="assets/cartas/001/001fondo.webp" style="filter: opacity(100%);" />                
+              <img class="medio" src="assets/cartas/001/001fondo.webp"; />                
               <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(-135deg) scale(2);">
                 <div class="line-container" style="justify-content: first baseline;" >
                   <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(253, 237, 9);"></div>
@@ -275,7 +275,6 @@
         <div class="carousel-item" id="carousel-item-2" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
-              <div class="fondo-rainbow" ></div>
               <img class="medio" src="assets/cartas/002/002fondo.webp" />                
               <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(45deg) scale(1.5);">
                 <div class="line-container" style="justify-content: first baseline;" >
@@ -342,8 +341,7 @@
                     <div class="line line-white"></div>
                   </div>
                   </div>
-              <img class="michi" src="assets/cartas/003/003michi00.webp" style=" z-index: 10">
-           
+                  <img class="bordecarta" style="z-index: 10;">           
                 <img class="michi" src="assets/cartas/003/003michi01.webp" style=" z-index: 10;  animation: flotar 5s ease-in-out alternate infinite">
                 <img class="michi" src="assets/cartas/003/003michi02.webp" style=" z-index: 11;  animation: flotar 3s ease-in-out alternate-reverse infinite">
                 <img class="michi" src="assets/cartas/003/003michi03.webp" style=" z-index: 12;  animation: flotar 4s ease-in-out alternate infinite">
@@ -377,8 +375,8 @@
               animation: animacion 0.2s steps(4) forwards infinite;
               background-size: 1368px 500px;
           "></div>
-          <div class="michi" style="background-image: url(./assets/cartas/borde.webp); z-index: 7;"></div>
-              <div class="michi" style="
+                  <img class="bordecarta" style="z-index: 7;">           
+                  <div class="michi" style="
               z-index: 19;
                   width: 342px; 
                   height: 500px;
@@ -417,8 +415,6 @@
                 <img class="sombra" src="assets/cartas/005/005papel.webp"  />
                 <img class="michi" src="assets/cartas/005/005michi02.webp" style=" z-index: 11;  animation: flotar 5s ease-in-out alternate-reverse infinite, blur alternate-reverse 5s infinite;">
                 <img class="michi" src="assets/cartas/005/005michi.webp" style=" z-index: 12;  animation: flotar 3s ease-in-out alternate infinite, blur alternate 5s infinite;">
-                <img class="michi" src="assets/cartas/005/005luz.webp" style="z-index: 13;">
-                <img class="bordecarta">
                 <img class="capaholograficaestrellas" src="assets/cartas/005/005estrellas.webp"   />
             </div>
             <div class="carta trasera"> </div>
