--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
     <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-49"></button>
     <div class="overlay-bloqueo overespecial"></div>
   </div>
-  <div class="carta-wrapper" data-pass="">
-    <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-50"></button>
+  <div class="carta-wrapper" data-pass="050">
+    <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/050.webp);" data-target="carousel-item-50"></button>
     <div class="overlay-bloqueo overespecial"></div>
   </div>
 
@@ -867,25 +867,30 @@
 </div>
 <!-----------------------------------------020------------------------------------>
 
-<div class="carousel-item" id="carousel-item-20">
+<div class="carousel-item" id="carousel-item-50">
   <div class="tarjeta">
-    <div class="carta frente" data-circle="circle4">
-      <div class="fondo-rainbow"></div>
-      <img class="medio" src="assets/cartas/alaka01.webp" style="filter: opacity(80%) brightness(0.8);"/>                
-      <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(45deg) translateX(-30px) scale(2);">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(74, 60, 0);"></div>
+      <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(90deg) scale(1.5);">
         <div class="line-container" style="justify-content: first baseline;" >
-          <div class="line line-recta"></div>
-          <div class="line line-recta"></div>
-          <div class="line line-recta"></div>
-          <div class="line line-recta"></div>   
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 20px rgb(187, 162, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 10px rgb(137, 114, 30);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(255, 166, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(255, 204, 0);"></div>
         </div>
-        <div class="line-container" style="justify-content: end; transform: rotate(90deg);">
-          <div class="line line-recta"></div>
-          <div class="line line-recta"></div>
-          <div class="line line-recta"></div>
-          <div class="line line-recta"></div>
+        <div class="line-container" style="justify-content: end;">
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 10px rgb(126, 104, 23);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 8px rgb(211, 181, 29);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 15px rgb(134, 113, 10);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(174, 182, 19);"></div>
         </div>
-        </div>
+        </div> 
+        <div class="michi" style="
+        z-index: 19;
+        background-image: url('/assets/cartas/050/050animacion.webp'); 
+        animation: animacion 0.35s steps(4) forwards infinite;
+        background-size: 1368px 500px;
+    "></div> 
         <img class="arriba" src="assets/cartas/alaka2.webp" />
         <img class="sombra" src="assets/cartas/alaka2.webp" style="filter: opacity(70%);"  />
     </div>
