--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@
 
 </div>
 
+<div class="separacion"></div>
+
         <div class="fondonegro"></div>
 
 <!-------------------------------------001---------------------------------------->  
@@ -870,18 +872,18 @@
 <div class="carousel-item" id="carousel-item-50">
   <div class="tarjeta">
     <div class="carta frente" data-circle="circle5 circle4">
-      <div class="michi" style="background-color: rgb(74, 60, 0);"></div>
+      <div class="michi" style="background-color: rgb(153, 125, 0);"></div>
       <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(90deg) scale(1.5);">
         <div class="line-container" style="justify-content: first baseline;" >
-          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 20px rgb(187, 162, 0);"></div>
-          <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 10px rgb(137, 114, 30);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 20px rgb(255, 221, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 10px rgb(127, 100, 4);"></div>
           <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(255, 166, 0);"></div>
           <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(255, 204, 0);"></div>
         </div>
         <div class="line-container" style="justify-content: end;">
-          <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 10px rgb(126, 104, 23);"></div>
-          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 8px rgb(211, 181, 29);"></div>
-          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 15px rgb(134, 113, 10);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 10px rgb(97, 77, 4);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 8px rgb(255, 213, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 15px rgb(104, 88, 9);"></div>
           <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(174, 182, 19);"></div>
         </div>
         </div> 
