--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
 
       <div class="bannermovil">
         <div class="bannerlogo" ></div>
-        <a 
-        data-aos="zoom-out-down"
-        href="#GALERIA" class="botongaleria"></a>
+        <a data-aos="zoom-out-down" href="#GALERIA" class="botongaleria"></a>
       </div>
 
 
