--- a/index.html
+++ b/index.html
@@ -56,17 +56,20 @@
       <div class="banner">
         <div data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="1000" class="bannermichis"></div>
         <div data-aos="fade-left" data-aos-duration="1500"  data-aos-delay="700" class="bannermichis"></div>
-        <div class="bannerlogo" ></div>
+        <div class="bannerlogo" data-bg-base="logoprograma01"></div>
       </div>
 
       <div class="bannermovil">
-        <div class="bannerlogo" ></div>
+        <div class="bannerlogo" data-bg-base="logoprograma01" ></div>
         <a data-aos="zoom-out-down" href="#GALERIA" class="botongaleria"></a>
       </div>
 
+<!----------------------SEPARACION--------------------------------------->
+<div style="width: 100%; height: 100px; position: relative;"></div>
 
 
 <!----------------------boton de codigo--------------------------------------->
+
 
   <div class="BOTONDESBLOQUEAR" id="inputCodigoContainer">
     <input type="text" id="codigoGlobal" placeholder="INGRESAR CÓDIGO" autocomplete="off" />
@@ -166,84 +169,92 @@
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-21"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+
+  </div>
+
+
+  <div class="contenedorcolores" style="background-color: rgba(74, 83, 255, 0.167);">
+
+        <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-22"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-23"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-24"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-25"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-26"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-27"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-28"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-29"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-30"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+        <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-32"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-34"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-35"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-36"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-37"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-38"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-39"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-40"></button>
-      <div class="overlay-bloqueo overnormal"></div>
+      <div class="overlay-bloqueo overraro"></div>
     </div>
 
+
   </div>
+
 
 
   <div class="contenedorcolores" style="background-color: rgba(255, 217, 0, 0.4);">
