--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" tipe="text/css" href="style/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Fredericka+the+Great&family=Kranky&family=Lacquer&family=Slackside+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
 
     <title>Proyectual I</title>
@@ -50,6 +50,44 @@
         background-size: 1368px 500px;
     "></div>
       </div>
+
+
+<!------------------------NAVBAR------------------------------------->
+
+
+<div  class="navoculto">
+  <DIV class="navbar">
+    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
+    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>MECÁNICA</p></a>
+    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>NOTICIAS</p></a>
+    <a href="#CANJEARCODIGO" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>CANJEAR CÓDIGO</p></a>
+    <a href="#GALERIA" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p> GALERÍA</p></a>
+    <a href="" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p >INSTAGRAM</p></a>
+
+  </DIV>
+
+</div>
+
+
+<!------------------------NAVBAR  MOVIL------------------------------------->
+
+
+    <div class="botonmenu">
+    </div>
+    <div class="botonmenudesplegable">
+
+    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
+    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" ></div> <p>MECÁNICA</p></a>
+    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" ></div> <p>NOTICIAS</p></a>
+    <a href="#CANJEARCODIGO" class="opcionnavbar"> <div class="opcionnavbarefectos" ></div> <p>CANJEAR CÓDIGO</p></a>
+    <a href="#GALERIA" class="opcionnavbar"> <div class="opcionnavbarefectos" ></div> <p> GALERÍA</p></a>
+    <a href="" class="opcionnavbar"> <div class="opcionnavbarefectos" ></div> <p >INSTAGRAM</p></a>
+
+    </div>
+    <div class="cerrar" style="display: none; ">
+      <button>X</button>
+    </div>
+
 <!------------------------BANNER PRESENTACION------------------------------------->
 
 
@@ -71,7 +109,7 @@
 <!----------------------boton de codigo--------------------------------------->
 
 
-  <div class="BOTONDESBLOQUEAR" id="inputCodigoContainer">
+  <div id="CANJEARCODIGO" class="BOTONDESBLOQUEAR" id="inputCodigoContainer">
     <input type="text" id="codigoGlobal" placeholder="INGRESAR CÓDIGO" autocomplete="off" />
     <button id="botonVerificarCodigo">🔓</button>
   </div>
@@ -306,7 +344,7 @@
 
 <div class="separacion"></div>
 
-        <div class="fondonegro">
+        <div class="fondonegro"  >
           <div class="botoncerrar" ><p>x</p></div>
         </div>
 
