--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     </div>
     <div class="cerrar" style="display: none; ">
-      <button>X</button>
+      <button> <p>X</p></button>
     </div>
 
 <!------------------------BANNER PRESENTACION------------------------------------->
@@ -121,7 +121,7 @@
 
 <div  class="cartasgaleriacontainer" id="galeriacartas">
   <div class="separacion"></div>
-  <div class="contenedorcolores" style="background-color: rgba(255, 0, 149, 0.198);">
+  <div class="contenedorcolores">
 
     <div class="carta-wrapper" data-pass="001">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
@@ -211,7 +211,7 @@
   </div>
 
 
-  <div class="contenedorcolores" style="background-color: rgba(74, 83, 255, 0.167);">
+  <div class="contenedorcolores" >
 
         <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-22"></button>
@@ -295,7 +295,7 @@
 
 
 
-  <div class="contenedorcolores" style="background-color: rgba(255, 217, 0, 0.4);">
+  <div class="contenedorcolores">
 
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-41"></button>
