--- a/index.html
+++ b/index.html
@@ -34,21 +34,7 @@
 
 
       <div class="pantallaNegra" id="pantallaNegra">
-        <div class="michi" style="
-          background-image: url(./assets/cartas/logo.webp);
-           background-size: cover;
-           top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);"></div>
-        <div class="michi" style="
-        z-index: 999999;
-        top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-        background-image: url('/assets/cartas/locketanimacion.webp'); 
-        animation: animacion 0.2s steps(4) forwards infinite;
-        background-size: 1368px 500px;
-    "></div>
+ <div class="spinner"></div>
       </div>
 
 
@@ -123,32 +109,32 @@
   <div class="separacion"></div>
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-pass="001">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-1"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="002">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-2"></button>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-2"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="003">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-3"></button>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-3"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="004">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/004.webp);" data-target="carousel-item-4"></button>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-4"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="005">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/005.webp);" data-target="carousel-item-5"></button>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-5"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="006">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/006.webp);" data-target="carousel-item-6"></button>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-6"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="007">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/007.webp);" data-target="carousel-item-7"></button>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -213,32 +199,32 @@
 
   <div class="contenedorcolores" >
 
-        <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-22"></button>
+          <div class="carta-wrapper" data-pass="021">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-21"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-23"></button>
+    <div class="carta-wrapper" data-pass="022">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-22"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-24"></button>
+    <div class="carta-wrapper" data-pass="023">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-23"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-25"></button>
+    <div class="carta-wrapper" data-pass="024">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/004.webp);" data-target="carousel-item-24"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-26"></button>
+    <div class="carta-wrapper" data-pass="025">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/005.webp);" data-target="carousel-item-25"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-27"></button>
+    <div class="carta-wrapper" data-pass="026">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/006.webp);" data-target="carousel-item-26"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo" style="background-image: url(./assets/cartas/);" data-target="carousel-item-28"></button>
+    <div class="carta-wrapper" data-pass="027">
+      <button class="cartaejemplo" style="background-image: url(./assets/cartas/MINIATURAS/007.webp);" data-target="carousel-item-27"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -349,7 +335,7 @@
         </div>
 
 <!-------------------------------------001---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-1" >
+         <div class="carousel-item" id="carousel-item-21" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img class="medio" src="assets/cartas/001/001fondo.webp"; />                
@@ -383,7 +369,7 @@
 <!--------------------------------------002---------------------------------------> 
 
 
-        <div class="carousel-item" id="carousel-item-2" >
+        <div class="carousel-item" id="carousel-item-22" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img class="medio" src="assets/cartas/002/002fondo.webp" />                
@@ -418,7 +404,7 @@
         </div>
 
 <!-------------------------------------003---------------------------------------->        
-        <div class="carousel-item" id="carousel-item-3" > 
+        <div class="carousel-item" id="carousel-item-23" > 
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle5">
               <img class="medio" src="assets/cartas/003/003fondo.webp" />  
@@ -455,7 +441,7 @@
 <!------------------------------------004-----------------------------------------> 
 
 
-        <div class="carousel-item" id="carousel-item-4">
+        <div class="carousel-item" id="carousel-item-24">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle6 circle4">
               <img class="medio" src="assets/cartas/004/004fondo.webp" />  
@@ -488,7 +474,7 @@
         </div>
 <!-------------------------------------005----------------------------------------> 
 
-         <div class="carousel-item" id="carousel-item-5">
+         <div class="carousel-item" id="carousel-item-25">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <div class="fondo-rainbow" ></div>
@@ -519,7 +505,7 @@
 <!--------------------------------------006---------------------------------------> 
 
 
-        <div class="carousel-item" id="carousel-item-6">
+        <div class="carousel-item" id="carousel-item-26">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
               <div class="fondo-rainbow"></div> 
@@ -553,7 +539,7 @@
         </div>
         <!--------------------------------007---------------------------------------------> 
        
-        <div class="carousel-item" id="carousel-item-7">
+        <div class="carousel-item" id="carousel-item-27">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img class="medio" src="assets/cartas/007/007fondo.webp"/>   
