--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
   if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register("service-worker.js")
       .then(() => console.log("Service Worker registrado"))
-      .catch((error) => console.log("Error al registrar Service Worker", error));
+      .catch((error) => console.error("Error al registrar el Service Worker", error));
   }
 </script>
 
