--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
          <div class="carousel-item" id="carousel-item-1" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -317,7 +317,7 @@
          <div class="carousel-item" id="carousel-item-2" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -328,7 +328,7 @@
          <div class="carousel-item" id="carousel-item-3" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -339,7 +339,7 @@
          <div class="carousel-item" id="carousel-item-4" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -350,7 +350,7 @@
          <div class="carousel-item" id="carousel-item-5" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -361,7 +361,7 @@
          <div class="carousel-item" id="carousel-item-6" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -372,7 +372,7 @@
          <div class="carousel-item" id="carousel-item-7" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -383,7 +383,7 @@
          <div class="carousel-item" id="carousel-item-8" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -394,7 +394,7 @@
          <div class="carousel-item" id="carousel-item-9" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -405,7 +405,7 @@
          <div class="carousel-item" id="carousel-item-10" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -416,7 +416,7 @@
          <div class="carousel-item" id="carousel-item-11" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -427,7 +427,7 @@
          <div class="carousel-item" id="carousel-item-12" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -438,7 +438,7 @@
          <div class="carousel-item" id="carousel-item-13" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -449,7 +449,7 @@
          <div class="carousel-item" id="carousel-item-14" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -460,7 +460,7 @@
          <div class="carousel-item" id="carousel-item-15" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -471,7 +471,7 @@
          <div class="carousel-item" id="carousel-item-16" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -482,7 +482,7 @@
          <div class="carousel-item" id="carousel-item-17" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -493,7 +493,7 @@
          <div class="carousel-item" id="carousel-item-18" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -504,7 +504,7 @@
          <div class="carousel-item" id="carousel-item-19" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
@@ -515,7 +515,7 @@
          <div class="carousel-item" id="carousel-item-20" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img class="medio" src="assets/cartas/"; />                 
+              <img class="medio" src="assets/cartas/" />                 
               <img class="sombra" src="assets/cartas/"  />
             </div>
             <div class="carta trasera"> </div>
