--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Fredericka+the+Great&family=Kranky&family=Lacquer&family=Slackside+One&display=swap" rel="stylesheet">
 <link rel="manifest" href="manifest.json">
-<link rel="icon" type="image/png" href="icon-192.png">   
+<link rel="icon" type="image/png" href="/assets/icon-192.png">   
 <meta charset="UTF-8" />
 
     <title>Proyectual I</title>
