--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <body>
     <main>
 
+<button id="installButton">Instalar App</button>
+
+
+
 <!----------------------------ALERTA--------------------------------->
 
       <div id="alertaModal" class="modal-alerta oculto">
