--- a/galeria.html
+++ b/galeria.html
@@ -17,13 +17,27 @@
 <link rel="icon" type="image/png" href="/assets/icon-192.png">   
 <meta charset="UTF-8" />
 
-    <title>Proyectual I</title>
+    <title>Michi Box Card Game</title>
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
   </head>
   <body>
     <main>
 
-<button id="installButton">Instalar App</button>
+
+<!------------------------NAVBAR------------------------------------->
+
+
+<div  class="navoculto">
+  <DIV class="navbar">
+    <a href="index.html" class="opcionnavbar"> <p>INICIO</p></a>
+    <a href="#" class="opcionnavbar"> <div data-bg-base="logoprograma02" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
+    <a href="#" class="opcionnavbar"> <p>NOTICIAS</p></a>
+    <a href="#" class="opcionnavbar"> <p> GALERÍA</p></a>
+    <a href="" class="opcionnavbar"> <p >INSTAGRAM</p></a>
+
+  </DIV>
+
+</div>
 
 
 
@@ -44,22 +58,6 @@
       </div>
 
 
-<!------------------------NAVBAR------------------------------------->
-<a href="index.html" class="botonatras"></a>
-
-<div  class="navoculto">
-  <DIV class="navbar">
-    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
-    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>MECÁNICA</p></a>
-    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>NOTICIAS</p></a>
-    <a href="#CANJEARCODIGO" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>CANJEAR CÓDIGO</p></a>
-    <a href="#GALERIA" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p> GALERÍA</p></a>
-    <a href="" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p >INSTAGRAM</p></a>
-
-  </DIV>
-
-</div>
-
 <!----------------------boton de codigo--------------------------------------->
 
 
@@ -73,7 +71,7 @@
 
       <div id="GALERIA" class="carousel-container">
 
-<div  class="cartasgaleriacontainer" id="galeriacartas">
+<div  class="cartasgaleriacontainer">
   <div class="separacion"></div>
   <div class="contenedorcolores">
 
@@ -219,7 +217,6 @@
   </div>
 
 
-
   <div class="contenedorcolores">
 
     <div class="carta-wrapper" data-pass="">
@@ -255,7 +252,7 @@
   <div class="separacion"></div>
 </div>
 
-<div class="separacion"></div>
+
 
         <div class="fondonegro"  >
           <div class="botoncerrar" ><p>x</p></div>
@@ -765,7 +762,11 @@
 <!-----------------------------------------------------------------------------> 
       </div>
 
-
+<DIV class="contenedorbotoncerrar">
+  <a href="" class="botonatras"> A </a>
+    <a href="index.html" class="botonatras"> X </a>
+      <a href="" class="botonatras"> C </a>
+</DIV>
 
 
     </main>
