--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
 <link rel="icon" type="image/png" href="/assets/icon-192.png">   
 <meta charset="UTF-8" />
 
-    <title>Proyectual I</title>
+    <title>Michi Box Card Game</title>
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
   </head>
   <body>
     <main>
-
-<button id="installButton">Instalar App</button>
-
 
 
 
@@ -33,12 +30,11 @@
 
 <div  class="navoculto">
   <DIV class="navbar">
-    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
-    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>MECÁNICA</p></a>
-    <a href="#" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>NOTICIAS</p></a>
-    <a href="#CANJEARCODIGO" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p>CANJEAR CÓDIGO</p></a>
-    <a href="#GALERIA" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p> GALERÍA</p></a>
-    <a href="" class="opcionnavbar"> <div class="opcionnavbarefectos" data-bg-base="logoprograma02" ></div> <p >INSTAGRAM</p></a>
+    <a href="index.html" class="opcionnavbar"> <p>INICIO</p></a>
+    <a href="#" class="opcionnavbar"> <div data-bg-base="logoprograma02" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
+    <a href="#" class="opcionnavbar"> <p>NOTICIAS</p></a>
+    <a href="galeria.html" class="opcionnavbar"> <p> GALERÍA</p></a>
+    <a href="" class="opcionnavbar"> <p >INSTAGRAM</p></a>
 
   </DIV>
 
@@ -54,7 +50,7 @@
       <div class="banner">
         <div data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="1000" class="bannermichis"></div>
         <div data-aos="fade-left" data-aos-duration="1500"  data-aos-delay="700" class="bannermichis"></div>
-        <div class="bannerlogo" data-bg-base="logoprograma01"></div>
+        <div class="bannerlogo" ></div>
       </div>
 
 
