--- a/galeria.html
+++ b/galeria.html
@@ -50,7 +50,13 @@
           <button onclick="cerrarAlerta()">OK</button>
         </div>
       </div>
-<!------------------------PANTALLA NEGRA CARGANDO------------------------------------->
+
+<!------------------------PANTALLA NEGRA CARGANDO ------------------------------------>
+<div class="pantallacargando">
+   <div class="spinner"></div>
+</div>
+
+<!------------------------PANTALLA NEGRA CARGANDO al desbloquear carta------------------------------------->
 
 
       <div class="pantallaNegra" id="pantallaNegra">
@@ -255,7 +261,11 @@
 
 
         <div class="fondonegro"  >
-          <div class="botoncerrar" ><p>x</p></div>
+   <DIV class="contenedorbotoncerrar">
+  <div  class="botonatras"> A </div>
+    <div  class="botonatras"> X </div>
+      <div  class="botonatras"> C </div>
+</DIV>
         </div>
 
 
