--- a/galeria.html
+++ b/galeria.html
@@ -33,14 +33,17 @@
     <a href="#" class="opcionnavbar"> <div data-bg-base="logoprograma02" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
     <a href="#" class="opcionnavbar"> <p>NOTICIAS</p></a>
     <a href="#" class="opcionnavbar"> <p> GALERÍA</p></a>
-    <a href="" class="opcionnavbar"> <p >INSTAGRAM</p></a>
+    <a href="#" class="opcionnavbar"> <p >INSTAGRAM</p></a>
 
   </DIV>
 
 </div>
 
 
+<div id="main-content">
 
+
+  
 <!----------------------------ALERTA--------------------------------->
 
       <div id="alertaModal" class="modal-alerta oculto">
@@ -776,6 +779,11 @@
     <a href="index.html" class="botonatras"> X </a>
       <a href="" class="botonatras"> C </a>
 </DIV>
+
+
+</div>
+
+
 
 
     </main>
