--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 
-
+<div id="main-content">
 
 <!------------------------BANNER PRESENTACION------------------------------------->
 
@@ -74,6 +74,10 @@
 </div>
 
 </div>
+
+</div>
+
+
 
 
 
