--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
   <body>
     <main>
 
+<div class="contenedor-instalar">
+  <div id="panel-desplegable" class="panel-desplegable">Descarga la app</div>
+    <button id="installBtn" class="boton-instalar" style="display: none;"></button>
 
+</div>
 
 <!------------------------NAVBAR------------------------------------->
 
