--- a/index.html
+++ b/index.html
@@ -23,29 +23,13 @@
   <body>
     <main>
 
+      <!------------------------BOTON DESCARGAR------------------------------------->
+
 <div class="contenedor-instalar">
   <div id="panel-desplegable" class="panel-desplegable">Descarga la app</div>
     <button id="installBtn" class="boton-instalar" style="display: none;"></button>
-
 </div>
 
-<!------------------------NAVBAR------------------------------------->
-
-
-<div  class="navoculto">
-  <DIV class="navbar">
-    <a href="index.html" class="opcionnavbar"> <p>INICIO</p></a>
-    <a href="#" class="opcionnavbar"> <div data-bg-base="logoprograma02" ></div> <p>¿QUÉ ES MICHI BOX?</p></a>
-    <a href="#" class="opcionnavbar"> <p>NOTICIAS</p></a>
-    <a href="galeria.html" class="opcionnavbar"> <p> GALERÍA</p></a>
-    <a href="" class="opcionnavbar"> <p >INSTAGRAM</p></a>
-
-  </DIV>
-
-</div>
-
-
-<div id="main-content">
 
 <!------------------------BANNER PRESENTACION------------------------------------->
 
@@ -57,9 +41,9 @@
         <div class="bannerlogo" ></div>
       </div>
 
+<!------------------------NAVBAR movil menu------------------------------------->
 
 <div class="menuapp">
-
 <div class="contenedor">
   <div data-aos="zoom-out" class="logo"></div>
 <div class="botonesmenu">
@@ -69,19 +53,11 @@
       <div class="infoapp">
         <div data-aos="fade-left"  class="quees"></div>
         <div data-aos="fade-up" class="insta"></div>
-
       </div>
-
     </div>
-
 </div>
 </div>
-
 </div>
-
-</div>
-
-
 
 
 
